--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
                         </div>
                     </div>
                 </section>
-                <div class="offon">
-                    <div class="on"></div>
-                </div>
+                <label class="offon">
+                    <input type="checkbox">
+                    <span class="on"></span>
+                </label>
             </aside>
 
             <aside>
@@ -52,9 +53,10 @@
                         </div>
                     </div>
                 </section>
-                <div class="offon">
-                    <div class="on"></div>
-                </div>
+                <label class="offon">
+                    <input type="checkbox">
+                    <span class="on"></span>
+                </label>
             </aside>
 
             <aside>
@@ -67,9 +69,10 @@
                         </div>
                     </div>
                 </section>
-                <div class="offon">
-                    <div class="on"></div>
-                </div>
+                <label class="offon">
+                    <input type="checkbox">
+                    <span class="on"></span>
+                </label>
             </aside>
 
 
@@ -83,9 +86,10 @@
                         </div>
                     </div>
                 </section>
-                <div class="offon">
-                    <div class="on"></div>
-                </div>
+                <label class="offon">
+                    <input type="checkbox">
+                    <span class="on"></span>
+                </label>
             </aside>
 
         </footer>
